mlops-platform/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoriametrics
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: vm.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoriametrics
                port:
                  number: 8428
